more api fixes
