# ErsatzTV.Application/Resolutions/Queries/GetResolutionByNameHandler.cs
@@ -2,17 +2,17 @@ using ErsatzTV.Infrastructure.Data;
 using ErsatzTV.Infrastructure.Extensions;
 using Microsoft.EntityFrameworkCore;
 
-namespace ErsatzTV.Application.FFmpegProfiles;
+namespace ErsatzTV.Application.Resolutions;
 
 public class GetResolutionByNameHandler(IDbContextFactory<TvContext> dbContextFactory)
-    : IRequestHandler<GetResolutionByName, Option<int>>
+    : IRequestHandler<GetResolutionByName, Option<ResolutionViewModel>>
 {
-    public async Task<Option<int>> Handle(GetResolutionByName request, CancellationToken cancellationToken)
+    public async Task<Option<ResolutionViewModel>> Handle(GetResolutionByName request, CancellationToken cancellationToken)
     {
         await using TvContext dbContext = await dbContextFactory.CreateDbContextAsync(cancellationToken);
         return await dbContext.Resolutions
             .AsNoTracking()
             .SelectOneAsync(r => r.Name, r => r.Name == request.Name, cancellationToken)
-            .MapT(r => r.Id);
+            .MapT(Mapper.ProjectToViewModel);
     }
 }
