# ErsatzTV/Controllers/Api/ResolutionController.cs
@@ -1,4 +1,4 @@
-using ErsatzTV.Application.FFmpegProfiles;
+using ErsatzTV.Application.Resolutions;
 using MediatR;
 using Microsoft.AspNetCore.Mvc;
 
@@ -9,10 +9,10 @@ namespace ErsatzTV.Controllers.Api;
 public class ResolutionController(IMediator mediator) : ControllerBase
 {
     [HttpGet("/api/ffmpeg/resolution/by-name/{name}", Name="GetResolutionByName")]
-    public async Task<ActionResult<int>> GetResolutionByName(string name, CancellationToken cancellationToken)
+    public async Task<ActionResult<ResolutionViewModel>> GetResolutionByName(string name, CancellationToken cancellationToken)
     {
-        Option<int> result = await mediator.Send(new GetResolutionByName(name), cancellationToken);
-        return result.Match<ActionResult<int>>(i => Ok(i), () => NotFound());
+        Option<ResolutionViewModel> result = await mediator.Send(new GetResolutionByName(name), cancellationToken);
+        return result.Match<ActionResult<ResolutionViewModel>>(i => Ok(i), () => NotFound());
     }
 }
 
